--- a/src/variables/appcenter_payload.json
+++ b/src/variables/appcenter_payload.json
@@ -1,79 +1,58 @@
 [
     {
-        "date": "10/18",
+        "date": "2024-10-18",
         "sha": "5dadb1bc702a6f8b033b60c9249d7f7d1513ebe1",
         "appcenter": "89e39353-0100-458a-9174-7318aa183c5b/releases/36719",
         "time": 275,
         "size": 468.5
     },
     {
-        "date": "10/19",
+        "date": "2024-10-19",
         "sha": "5dadb1bc702a6f8b033b60c9249d7f7d1513ebe1",
         "appcenter": "89e39353-0100-458a-9174-7318aa183c5b/releases/36719",
         "time": 272,
         "size": 464.1
     },
     {
-        "date": "10/20",
+        "date": "2024-10-20",
         "sha": "5dadb1bc702a6f8b033b60c9249d7f7d1513ebe1",
         "appcenter": "89e39353-0100-458a-9174-7318aa183c5b/releases/36719",
         "time": 272,
         "size": 466.8
     },
     {
-        "date": "10/21",
+        "date": "2024-10-21",
         "sha": "5dadb1bc702a6f8b033b60c9249d7f7d1513ebe1",
         "appcenter": "89e39353-0100-458a-9174-7318aa183c5b/releases/36719",
         "time": 261,
         "size": 465.9
     },
     {
-        "date": "10/22",
+        "date": "2024-10-22",
         "sha": "5dadb1bc702a6f8b033b60c9249d7f7d1513ebe1",
         "appcenter": "89e39353-0100-458a-9174-7318aa183c5b/releases/36719",
         "time": 256,
         "size": 466.1
     },
     {
-        "date": "10/23",
+        "date": "2024-10-23",
         "sha": "5dadb1bc702a6f8b033b60c9249d7f7d1513ebe1",
         "appcenter": "89e39353-0100-458a-9174-7318aa183c5b/releases/36719",
         "time": 266,
         "size": 466.8
     },
     {
-        "date": "10/24",
+        "date": "2024-10-24",
         "sha": "5dadb1bc702a6f8b033b60c9249d7f7d1513ebe1",
         "appcenter": "89e39353-0100-458a-9174-7318aa183c5b/releases/36719",
         "time": 281,
         "size": 467.2
     },
     {
-        "date": "10/25",
+        "date": "2024-10-25",
         "sha": "5dadb1bc702a6f8b033b60c9249d7f7d1513ebe1",
         "appcenter": "89e39353-0100-458a-9174-7318aa183c5b/releases/36719",
         "time": 277,
         "size": 466.8
-    },
-    {
-        "date": "10/27",
-        "sha": "dea9221eab32",
-        "url": "someurl",
-        "size": 282,
-        "duration": 282.0
-    },
-    {
-        "date": "2024-03-11T17:26:56.282921+09:00",
-        "sha": "[\"424cda1112a71313f96ade06dbf95e45b3869856\"]",
-        "url": "https://kode.onkakao.net/%40dj/download/d85b0dab-86d4-4542-ac52-eb7a3efc10ec/jobs/Sandbox_CI/artifacts/SandboxTalk-11.1.2%282024.10.2.1%29.ipa",
-        "size": 66741882,
-        "duration": null
-    },
-    {
-        "date": "2024-04-13T17:26:56.282921+09:00",
-        "sha": "424cda1112a71313f96ade06dbf95e45b3869856",
-        "url": "https://kode.onkakao.net/%40dj/download/d85b0dab-86d4-4542-ac52-eb7a3efc10ec/jobs/Sandbox_CI/artifacts/SandboxTalk-11.1.2%282024.10.2.1%29.ipa",
-        "size": 66741882,
-        "duration": null
     }
 ]
